# reproducibility

./: .gitignore  .project  README.md
btw2025-STAN/: .gitignore  README.md  install_merlin_ucr.sh  install_utsadbench.sh
btw2025-incsliceline-p111/: README.md  run1SetupDependencies.sh  run2SetupSystemDS.sh  run3DownloadData.sh  run4PrepareLocalData.sh  run5Experiments.sh  run6PlotResults.sh  runAll.sh
btw2025-lineage-wed90/: README.md  wedekind_colorscheme.dot  wedekind_graph.dot  wedekind_heading.dot
btw2025-scalable-SHAP-p142/: .gitignore  README.md
cidr2022-daphne/: 1_setup_env.sh  2_setup_p2_data.sh  3_run_microbenchmarks.sh  4_run_p1.sh  5_run_p2.sh  Readme.md  run-all.sh
edbt2026-CAMEO/: .gitignore  README.md  data_loader.py  environment.yml  run_anomaly_detection_exp.py  run_cr_nrmse_exp.py  run_forecasting_exp.py  setup.py
sigmod2021-LIMA-p32/: README.md  README.txt  main.sh  system_setup.sh
sigmod2021-LIMA-rdm32/: main.sh
sigmod2021-exdra-p523/: .gitignore  README.md  verify_setup.sh
sigmod2021-sliceline-p218/: README.md  run1SetupDependencies.sh  run2SetupSystemDS.sh  run3DownloadData.sh  run4PrepareLocalData.sh  run5LocalExperiments.sh  run6PrepareDistData.sh  run7DistExperiments.sh  run8PlotResults.sh  runAll.sh
sigmod2023-AWARE-p5/: .gitignore
sigmod2023-GIO-p454/: README.md  load-had3.3-java11.sh  run0LoadConfig.sh  run1SetupDependencies.sh  run2SetupBaseLines.sh  run2SetupSystemDS.sh  run3DownloadData.sh  run4GenerateData.sh  run5LocalExperiments.sh  run6PlotResults.sh  runAll.sh
sigmod2023-GIO-p454/baselines/RapidJSONCPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gioRapidJSONExpRun.sh  handCodeRapidJSONExpRun.sh  makeClean.sh  resultPath.sh
sigmod2023-GIO-p454/baselines/RapidJSONCPP/src/at/tugraz/: aminerAuthor.cpp  aminerPaper.cpp  queryEngine.cpp  twitter.cpp
sigmod2023-GIO-p454/baselines/RapidJSONCPP/src/at/tugraz/Utils/header/: DataReader.h  FileHandler.h  ItemObject.h  ItemValue.h  LogFileHandler.h  Types.h
sigmod2023-GIO-p454/baselines/RapidJSONCPP/src/at/tugraz/Utils/source/: DataReader.cpp  FileHandler.cpp  LogFileHandler.cpp
sigmod2023-GIO-p454/baselines/RapidJSONCPP/src/at/tugraz/header/: FrameReader.h  FrameReaderAMinerAuthor.h  FrameReaderAMinerPaper.h  FrameReaderIMDB.h  FrameReaderQueryEngine.h  FrameReaderTwitter.h
sigmod2023-GIO-p454/baselines/RapidJSONCPP/src/at/tugraz/source/: FrameReader.cpp  FrameReaderAMinerAuthor.cpp  FrameReaderAMinerPaper.cpp  FrameReaderIMDB.cpp  FrameReaderQueryEngine.cpp  FrameReaderTwitter.cpp
sigmod2024-SAGA/: 01_getAndSummarizeData.sh  02_runExperimentsTables56.sh  03_runExperimentsTables78.sh  04_runExperimentsFigures34567.sh  05_runExperimentsFigures89.sh  06_runExperimentsFigure10.sh  07_runExperimentsTable09.sh  README.md  system_setup.sh
(+2246 files in other folders)
